Update Agentforce messaging configuration URLs for deployment

--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
     <!-- Live Chat Deployment -->
 <script type="text/javascript" id="init-agentforce-messaging" src="https://test-service.force.com/embeddedservice/agentforcemessaging/0.3/init.js" onload="
   agentforce_messaging.init({
-    siteUrl: 'https://jonjakk.github.io',
+    siteUrl: 'https://storm-f4bbd56c3b630a.builder.salesforce-experience.com',
     agentApiConfiguration: {
       agentId: '0XxJ6000000c1moKAA',
-      domainUrl: 'https://storm-f4bbd56c3b630a.builder.salesforce-experience.com',
+      domainUrl: 'jonjakk.github.io',
       endpoint: 'https://api.salesforce.com/einstein/ai-agent/v1.1/agents/0XxJ6000000c1moKAA/sessions',
-      authTokenEndpoint: 'https://jonjakk.github.io/agentforce/bootstrap?agentid=0XxJ6000000c1moKAA',
+      authTokenEndpoint: 'https://storm-f4bbd56c3b630a.builder.salesforce-experience.com/agentforce/bootstrap?agentid=0XxJ6000000c1moKAA',
       voiceEndpoint: 'https://api.salesforce.com/einstein/ai-agent/v1.1/realtime/sessions/{SESSION_ID}/join',
       uiConfiguration: {}
     }
