--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:; connect-src 'self' https://*.force.com https://*.salesforce.com https://api.salesforce.com wss://*.salesforce.com; style-src 'self' 'unsafe-inline' https://*.force.com https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.force.com https://cdnjs.cloudflare.com; img-src 'self' data: https://*.force.com; font-src 'self' https://cdnjs.cloudflare.com; frame-src 'self' https://*.force.com;">
     <title>Mercedes-Benz Car Configurator</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
