--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self' https:;
-  style-src 'self' 'unsafe-inline' https:;
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https:;
+  style-src 'self' 'unsafe-inline' https: https://test-service.force.com;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https: https://test-service.force.com;
   connect-src 'self' https:;
   frame-src 'self' https:;
   img-src 'self' data: https:;
