--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self' https:;
-  style-src 'self' 'unsafe-inline' https: https://test-service.force.com;
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https: https://test-service.force.com;
-  connect-src 'self' https:;
+  default-src 'self';
+  style-src 'self' 'unsafe-inline' https://test-service.force.com https://storm-f4bbd56c3b630a.my.site.com https://cdnjs.cloudflare.com;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://test-service.force.com https://storm-f4bbd56c3b630a.my.site.com;
+  connect-src 'self' https://api.salesforce.com https://storm-f4bbd56c3b630a.my.site.com;
   frame-src 'self' https:;
   img-src 'self' data: https:;
-  font-src 'self' https:;
+  font-src 'self' https://cdnjs.cloudflare.com;
 ">
     <title>Mercedes-Benz Car Configurator</title>
     <link rel="stylesheet" href="css/styles.css">
