--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <!-- Live Chat Deployment -->
 <script type="text/javascript" id="init-agentforce-messaging" src="https://test-service.force.com/embeddedservice/agentforcemessaging/0.3/init.js" onload="
   agentforce_messaging.init({
-    siteUrl: 'https://jonjakk.github.io/github/',
+    siteUrl: 'jonjakk.github.io',
     agentApiConfiguration: {
       agentId: '0XxJ6000000c1moKAA',
       domainUrl: 'storm-f4bbd56c3b630a.my.site.com',
