--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
     <!-- Live Chat Deployment -->
 <script type="text/javascript" id="init-agentforce-messaging" src="https://test-service.force.com/embeddedservice/agentforcemessaging/0.3/init.js" onload="
   agentforce_messaging.init({
-    siteUrl: 'jonjakk.github.io',
+    siteUrl: 'https://storm-f4bbd56c3b630a.my.site.com',
     agentApiConfiguration: {
       agentId: '0XxJ6000000c1moKAA',
-      domainUrl: 'storm-f4bbd56c3b630a.my.site.com',
+      domainUrl: 'jonjakk.github.io',
       endpoint: 'https://api.salesforce.com/einstein/ai-agent/v1.1/agents/0XxJ6000000c1moKAA/sessions',
       authTokenEndpoint: 'https://storm-f4bbd56c3b630a.my.site.com/github/agentforce/bootstrap?agentid=0XxJ6000000c1moKAA',
       voiceEndpoint: 'https://api.salesforce.com/einstein/ai-agent/v1.1/realtime/sessions/{SESSION_ID}/join',
