--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     siteUrl: 'https://storm-f4bbd56c3b630a.my.site.com',
     agentApiConfiguration: {
       agentId: '0XxJ6000000c1moKAA',
-      domainUrl: 'https://jonjakk.github.io/github',
+      domainUrl: 'https://jonjakk.github.io/demo',
       endpoint: 'https://api.salesforce.com/einstein/ai-agent/v1.1/agents/0XxJ6000000c1moKAA/sessions',
       authTokenEndpoint: 'https://storm-f4bbd56c3b630a.my.site.com/github/agentforce/bootstrap?agentid=0XxJ6000000c1moKAA',
       voiceEndpoint: 'https://api.salesforce.com/einstein/ai-agent/v1.1/realtime/sessions/{SESSION_ID}/join',
